// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Media placeholder accepts custom styles 1`] = `
.c0 {
  background: #A5A5A5;
  border-radius: 16px;
  display: block;
  height: 100%;
  width: 100%;
  background: salmon;
}

<mark
  className="c0 ui-kit-Placeholder-Media custom-placeholder"
  size="100%"
/>
`;

exports[`The Media placeholder should render 1`] = `
.c0 {
  background: #A5A5A5;
  border-radius: 16px;
  display: block;
  height: 100%;
  width: 100%;
}

<mark
  className="c0 ui-kit-Placeholder-Media custom-placeholder"
  size="100%"
/>
`;

exports[`The Media placeholder should render a custom size 1`] = `
.c0 {
  background: #A5A5A5;
  border-radius: 16px;
  display: block;
  height: 50%;
  width: 50%;
}

<mark
  className="c0 ui-kit-Placeholder-Media custom-placeholder"
  size="50%"
/>
`;

exports[`The Media placeholder should render children when isLoading = false 1`] = `"Rendered child"`;

exports[`The Media placeholder should render showLoadingAnimation 1`] = `
.c0 {
  background: #A5A5A5;
  border-radius: 16px;
  display: block;
  height: 100%;
  width: 100%;
}

<mark
  className="c0 show-loading-animation ui-kit-Placeholder-Media custom-placeholder"
  size="100%"
/>
`;
